<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sick_lidar_localization2</name>
  <version>0.0.1</version>
  <description>sick_lidar_localization is an open-source project to support the LiDAR-LOC software of the company SICK using the ROS2-framework</description>
  <maintainer email="matous.pokorny@datavision.cz">Matous Pokorny</maintainer>
  <license>Apache</license>

  <author email="ros.test@lehning.de">Michael Lehning</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
